--- a/ProjectManagement/pom.xml
+++ b/ProjectManagement/pom.xml
@@ -58,7 +58,19 @@
             <artifactId>opencsv</artifactId>
             <version>5.2</version>
         </dependency>
+    
+      <dependency>
+        <groupId>org.powermock.tests</groupId>
+        <artifactId>powermock-tests-utils</artifactId>
+        <version>1.6.6</version>
+      </dependency>
     </dependencies>
+    <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
+        </dependency>
 
     <build>
         <plugins>
